// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMenu utility with basic paths with /a 1`] = `
Array [
  Object {
    "authority": "guest",
    "children": Array [
      Object {
        "exact": true,
        "icon": "1",
        "name": "1",
        "path": "/a/1",
        "position": "MIDDLE",
      },
      Object {
        "children": Array [
          Object {
            "category": "middle",
            "exact": true,
            "icon": "a1",
            "name": "a1",
            "path": "/a/m/a1",
            "position": "MIDDLE",
          },
          Object {
            "category": "top",
            "exact": true,
            "icon": "a2",
            "name": "a2",
            "path": "/a/m/a2",
            "position": "MIDDLE",
          },
        ],
        "exact": false,
        "icon": "m",
        "name": "m",
        "path": "/a/m",
        "position": "MIDDLE",
      },
    ],
    "exact": false,
    "icon": "a",
    "name": "a",
    "path": "/a",
    "position": "MIDDLE",
  },
  Object {
    "exact": true,
    "icon": "b1",
    "name": "b1",
    "path": "/b/b1",
    "position": "MIDDLE",
  },
  Object {
    "exact": true,
    "icon": "b2",
    "name": "b2",
    "path": "/b/b2",
    "position": "MIDDLE",
  },
]
`;

exports[`getMenu utility with basic paths with /a 2`] = `
Array [
  Object {
    "authority": "guest",
    "children": Array [
      Object {
        "authority": "guest",
        "exact": true,
        "icon": "1",
        "name": "1",
        "path": "/a/1",
        "position": "MIDDLE",
      },
      Object {
        "authority": "guest",
        "children": Array [
          Object {
            "authority": "guest",
            "category": "middle",
            "exact": true,
            "icon": "a1",
            "name": "a1",
            "path": "/a/m/a1",
            "position": "MIDDLE",
          },
          Object {
            "authority": "guest",
            "category": "top",
            "exact": true,
            "icon": "a2",
            "name": "a2",
            "path": "/a/m/a2",
            "position": "MIDDLE",
          },
        ],
        "exact": false,
        "icon": "m",
        "name": "m",
        "path": "/a/m",
        "position": "MIDDLE",
      },
    ],
    "exact": false,
    "icon": "a",
    "name": "a",
    "path": "/a",
    "position": "MIDDLE",
  },
  Object {
    "authority": undefined,
    "exact": true,
    "icon": "b1",
    "name": "b1",
    "path": "/b/b1",
    "position": "MIDDLE",
  },
  Object {
    "authority": undefined,
    "exact": true,
    "icon": "b2",
    "name": "b2",
    "path": "/b/b2",
    "position": "MIDDLE",
  },
]
`;

exports[`getMenu utility with basic paths with /a 3`] = `
Object {
  "/a": Object {
    "authority": "guest",
    "children": Array [
      Object {
        "authority": "guest",
        "exact": true,
        "icon": "1",
        "name": "1",
        "path": "/a/1",
        "position": "MIDDLE",
      },
      Object {
        "authority": "guest",
        "children": Array [
          Object {
            "authority": "guest",
            "category": "middle",
            "exact": true,
            "icon": "a1",
            "name": "a1",
            "path": "/a/m/a1",
            "position": "MIDDLE",
          },
          Object {
            "authority": "guest",
            "category": "top",
            "exact": true,
            "icon": "a2",
            "name": "a2",
            "path": "/a/m/a2",
            "position": "MIDDLE",
          },
        ],
        "exact": false,
        "icon": "m",
        "name": "m",
        "path": "/a/m",
        "position": "MIDDLE",
      },
    ],
    "exact": false,
    "icon": "a",
    "name": "a",
    "path": "/a",
    "position": "MIDDLE",
  },
  "/a/1": Object {
    "authority": "guest",
    "exact": true,
    "icon": "1",
    "name": "1",
    "path": "/a/1",
    "position": "MIDDLE",
  },
  "/a/m": Object {
    "authority": "guest",
    "children": Array [
      Object {
        "authority": "guest",
        "category": "middle",
        "exact": true,
        "icon": "a1",
        "name": "a1",
        "path": "/a/m/a1",
        "position": "MIDDLE",
      },
      Object {
        "authority": "guest",
        "category": "top",
        "exact": true,
        "icon": "a2",
        "name": "a2",
        "path": "/a/m/a2",
        "position": "MIDDLE",
      },
    ],
    "exact": false,
    "icon": "m",
    "name": "m",
    "path": "/a/m",
    "position": "MIDDLE",
  },
  "/a/m/a1": Object {
    "authority": "guest",
    "category": "middle",
    "exact": true,
    "icon": "a1",
    "name": "a1",
    "path": "/a/m/a1",
    "position": "MIDDLE",
  },
  "/a/m/a2": Object {
    "authority": "guest",
    "category": "top",
    "exact": true,
    "icon": "a2",
    "name": "a2",
    "path": "/a/m/a2",
    "position": "MIDDLE",
  },
  "/b/b1": Object {
    "authority": undefined,
    "exact": true,
    "icon": "b1",
    "name": "b1",
    "path": "/b/b1",
    "position": "MIDDLE",
  },
  "/b/b2": Object {
    "authority": undefined,
    "exact": true,
    "icon": "b2",
    "name": "b2",
    "path": "/b/b2",
    "position": "MIDDLE",
  },
}
`;

exports[`getMenu utility with connector with connector 1`] = `
Array [
  Object {
    "children": undefined,
    "component": undefined,
    "exact": true,
    "icon": "b1",
    "key": undefined,
    "name": "b1",
    "path": "/test/b/b1",
    "position": "MIDDLE",
    "priority": undefined,
    "tab": undefined,
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "component": undefined,
            "exact": true,
            "icon": "a2",
            "key": undefined,
            "name": "a2",
            "path": "/test/a/m/a2",
            "position": "MIDDLE",
            "priority": undefined,
            "tab": undefined,
          },
        ],
        "component": undefined,
        "exact": false,
        "icon": "m",
        "key": undefined,
        "name": "m",
        "path": "/test/a/m",
        "position": "MIDDLE",
        "priority": undefined,
        "tab": undefined,
      },
      Object {
        "children": undefined,
        "component": undefined,
        "exact": true,
        "icon": "1",
        "key": undefined,
        "name": "1",
        "path": "/test/a/1",
        "position": "MIDDLE",
        "priority": undefined,
        "tab": undefined,
      },
    ],
    "component": undefined,
    "exact": false,
    "icon": "a",
    "key": undefined,
    "name": "a",
    "path": "/test/a",
    "position": "MIDDLE",
    "priority": undefined,
    "tab": undefined,
  },
  Object {
    "children": undefined,
    "component": undefined,
    "exact": true,
    "icon": "b2",
    "key": undefined,
    "name": "b2",
    "path": "/b/b2",
    "position": "MIDDLE",
    "priority": undefined,
    "tab": undefined,
  },
  Object {
    "children": undefined,
    "component": undefined,
    "exact": true,
    "icon": "b1",
    "key": undefined,
    "name": "b1",
    "path": "/b/b1",
    "position": "MIDDLE",
    "priority": undefined,
    "tab": undefined,
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "component": undefined,
            "exact": true,
            "icon": "a2",
            "key": undefined,
            "name": "a2",
            "path": "/a/m/a2",
            "position": "MIDDLE",
            "priority": undefined,
            "tab": undefined,
          },
          Object {
            "children": undefined,
            "component": undefined,
            "exact": true,
            "icon": "a1",
            "key": undefined,
            "name": "a1",
            "path": "/a/m/a1",
            "position": "MIDDLE",
            "priority": undefined,
            "tab": undefined,
          },
        ],
        "component": undefined,
        "exact": false,
        "icon": "m",
        "key": undefined,
        "name": "m",
        "path": "/a/m",
        "position": "MIDDLE",
        "priority": undefined,
        "tab": undefined,
      },
      Object {
        "children": undefined,
        "component": undefined,
        "exact": true,
        "icon": "1",
        "key": undefined,
        "name": "1",
        "path": "/a/1",
        "position": "MIDDLE",
        "priority": undefined,
        "tab": undefined,
      },
    ],
    "component": undefined,
    "exact": false,
    "icon": "a",
    "key": undefined,
    "name": "a",
    "path": "/a",
    "position": "MIDDLE",
    "priority": undefined,
    "tab": undefined,
  },
]
`;
